site/api/4.00/Scanf.md
<!-- ((! set title API !)) ((! set documentation !)) ((! set api !)) ((! set nobreadcrumb !)) -->
<div class="api"><header><nav class="toc brand"><a class="brand" href="https://ocaml.org/"><img src="colour-logo-gray.svg" class="svg" alt="OCaml"></a></nav><nav class="toc"><div class="toc_version"><a href="/docs" id="version-select">API Version 4.00</a></div><a href="index.html">&lt; General Index</a><div class="api_search"><input type="text" name="apisearch" id="api_search" oninput="mySearch(false);" onkeypress="this.oninput();" onclick="this.oninput();" onpaste="this.oninput();">
<img src="search_icon.svg" alt="Search" class="svg" onclick="mySearch(false)"></div>
<div id="search_results"></div><div class="toc_title"><a href="#top">Scanf</a></div><ul></ul></nav></header>

<h1>Module <a href="type_Scanf.html">Scanf</a></h1>
<pre><span class="keyword">module</span> Scanf: <code class="code"><span class="keyword">sig</span></code> <a href="Scanf.html">..</a> <code class="code"><span class="keyword">end</span></code></pre>Formatted input functions.<br>
<hr width="100%">
<br>
<span id="6_Introduction"><h6>Introduction</h6></span><br>
<br>
<span id="7_Functionalinputwithformatstrings"><div class="h7">Functional input with format strings</div></span><br>
<br>
The module <code class="code"><span class="constructor">Scanf</span></code> provides formatted input functions or <em>scanners</em>.
<p>

    The formatted input functions can read from any kind of input, including
    strings, files, or anything that can return characters. The more general
    source of characters is named a <em>formatted input channel</em> (or <em>    scanning buffer</em>) and has type <a href="Scanf.Scanning.html#TYPEin_channel"><code class="code"><span class="constructor">Scanf</span>.<span class="constructor">Scanning</span>.in_channel</code></a>. The more general
    formatted input function reads from any scanning buffer and is named
    <code class="code">bscanf</code>.
</p><p>

    Generally speaking, the formatted input functions have 3 arguments:</p><ul>
<li>the first argument is a source of characters for the input,</li>
<li>the second argument is a format string that specifies the values to
      read,</li>
<li>the third argument is a <em>receiver function</em> that is applied to the
      values read.</li>
</ul>

    Hence, a typical call to the formatted input function <a href="Scanf.html#VALbscanf"><code class="code"><span class="constructor">Scanf</span>.bscanf</code></a> is
    <code class="code">bscanf ic fmt f</code>, where:
<p>
</p><ul>
<li><code class="code">ic</code> is a source of characters (typically a <em>    formatted input channel</em> with type <a href="Scanf.Scanning.html#TYPEin_channel"><code class="code"><span class="constructor">Scanf</span>.<span class="constructor">Scanning</span>.in_channel</code></a>),</li>
</ul>
<ul>
<li><code class="code">fmt</code> is a format string (the same format strings as those used to print
    material with module <a href="Printf.html"><code class="code"><span class="constructor">Printf</span></code></a> or <a href="Format.html"><code class="code"><span class="constructor">Format</span></code></a>),</li>
</ul>
<ul>
<li><code class="code">f</code> is a function that has as many arguments as the number of values to
    read in the input.</li>
</ul>
<br>
<br>
<span id="7_Asimpleexample"><div class="h7">A simple example</div></span><br>
<br>
As suggested above, the expression <code class="code">bscanf ic <span class="string">"%d"</span> f</code> reads a decimal
    integer <code class="code">n</code> from the source of characters <code class="code">ic</code> and returns <code class="code">f n</code>.
<p>

    For instance,
</p><p>
</p><ul>
<li>if we use <code class="code">stdin</code> as the source of characters (<a href="Scanf.Scanning.html#VALstdin"><code class="code"><span class="constructor">Scanf</span>.<span class="constructor">Scanning</span>.stdin</code></a> is
    the predefined formatted input channel that reads from standard input),</li>
</ul>
<ul>
<li>if we define the receiver <code class="code">f</code> as <code class="code"><span class="keyword">let</span> f x = x + 1</code>,</li>
</ul>

    then <code class="code">bscanf <span class="constructor">Scanning</span>.stdin <span class="string">"%d"</span> f</code> reads an integer <code class="code">n</code> from the
    standard input and returns <code class="code">f n</code> (that is <code class="code">n + 1</code>). Thus, if we
    evaluate <code class="code">bscanf stdin <span class="string">"%d"</span> f</code>, and then enter <code class="code">41</code> at the
    keyboard, we get <code class="code">42</code> as the final result.<br>
<br>
<span id="7_Formattedinputasafunctionalfeature"><div class="h7">Formatted input as a functional feature</div></span><br>
<br>
The OCaml scanning facility is reminiscent of the corresponding C feature.
    However, it is also largely different, simpler, and yet more powerful:
    the formatted input functions are higher-order functionals and the
    parameter passing mechanism is just the regular function application not
    the variable assignment based mechanism which is typical for formatted
    input in imperative languages; the OCaml format strings also feature
    useful additions to easily define complex tokens; as expected within a
    functional programming language, the formatted input functions also
    support polymorphism, in particular arbitrary interaction with
    polymorphic user-defined scanners.  Furthermore, the OCaml formatted input
    facility is fully type-checked at compile time.<br>
<br>
<span id="6_Formattedinputchannel"><h6>Formatted input channel</h6></span><br>
<pre><span class="keyword">module</span> <a href="Scanf.Scanning.html">Scanning</a>: <code class="code"><span class="keyword">sig</span></code> <a href="Scanf.Scanning.html">..</a> <code class="code"><span class="keyword">end</span></code></pre><br>
<span id="6_Typeofformattedinputfunctions"><h6>Type of formatted input functions</h6></span><br>
<pre><span id="TYPEscanner"><span class="keyword">type</span> <code class="type">('a, 'b, 'c, 'd)</code> scanner</span> = <code class="type">('a, <a href="Scanf.Scanning.html#TYPEin_channel">Scanning.in_channel</a>, 'b, 'c, 'a -&gt; 'd, 'd) format6 -&gt; 'c</code> </pre>
<div class="info">
The type of formatted input scanners: <code class="code">(<span class="keywordsign">'</span>a, <span class="keywordsign">'</span>b, <span class="keywordsign">'</span>c, <span class="keywordsign">'</span>d) scanner</code>
    is the type of a formatted input function that reads from some
    formatted input channel according to some format string; more
    precisely, if <code class="code">scan</code> is some formatted input function, then <code class="code">scan
    ic fmt f</code> applies <code class="code">f</code> to the arguments specified by the format
    string <code class="code">fmt</code>, when <code class="code">scan</code> has read those arguments from the
    formatted input channel <code class="code">ic</code>.
<p>

    For instance, the <code class="code">scanf</code> function below has type <code class="code">(<span class="keywordsign">'</span>a, <span class="keywordsign">'</span>b, <span class="keywordsign">'</span>c, <span class="keywordsign">'</span>d)
    scanner</code>, since it is a formatted input function that reads from
    <code class="code"><span class="constructor">Scanning</span>.stdin</code>: <code class="code">scanf fmt f</code> applies <code class="code">f</code> to the arguments specified by
    <code class="code">fmt</code>, reading those arguments from <code class="code"><span class="constructor">Pervasives</span>.stdin</code> as expected.
</p><p>

    If the format <code class="code">fmt</code> has some <code class="code">%r</code> indications, the corresponding input
    functions must be provided before the receiver <code class="code">f</code> argument. For
    instance, if <code class="code">read_elem</code> is an input function for values of type <code class="code">t</code>,
    then <code class="code">bscanf ic <span class="string">"%r;"</span> read_elem f</code> reads a value <code class="code">v</code> of type <code class="code">t</code> followed
    by a <code class="code"><span class="string">';'</span></code> character, and returns <code class="code">f v</code>.<br>
<b>Since</b> 3.10.0<br>
</p></div>

<pre><span id="EXCEPTIONScan_failure"><span class="keyword">exception</span> Scan_failure</span> <span class="keyword">of</span> <code class="type">string</code></pre>
<div class="info">
The exception that formatted input functions raise when the input cannot be
    read according to the given format.<br>
</div>
<br>
<span id="6_Thegeneralformattedinputfunction"><h6>The general formatted input function</h6></span><br>
<pre><span id="VALbscanf"><span class="keyword">val</span> bscanf</span> : <code class="type"><a href="Scanf.Scanning.html#TYPEin_channel">Scanning.in_channel</a> -&gt; ('a, 'b, 'c, 'd) <a href="Scanf.html#TYPEscanner">scanner</a></code></pre><div class="info">
<code class="code">bscanf ic fmt r1 ... rN f</code> reads arguments for the function <code class="code">f</code>, from the
    formatted input channel <code class="code">ic</code>, according to the format string <code class="code">fmt</code>, and
    applies <code class="code">f</code> to these values.
    The result of this call to <code class="code">f</code> is returned as the result of the entire
    <code class="code">bscanf</code> call.
    For instance, if <code class="code">f</code> is the function <code class="code"><span class="keyword">fun</span> s i <span class="keywordsign">-&gt;</span> i + 1</code>, then
    <code class="code"><span class="constructor">Scanf</span>.sscanf <span class="string">"x=  1"</span> <span class="string">"%s = %i"</span> f</code> returns <code class="code">2</code>.
<p>

    Arguments <code class="code">r1</code> to <code class="code">rN</code> are user-defined input functions that read the
    argument corresponding to a <code class="code">%r</code> conversion.<br>
</p></div>
<br>
<span id="6_Formatstringdescription"><h6>Format string description</h6></span><br>
<br>
The format is a character string which contains three types of
    objects:<ul>
<li>plain characters, which are simply matched with the characters of the
      input (with a special case for space and line feed, see <a href="Scanf.html#space"><i>The space character in format strings</i></a>),</li>
<li>conversion specifications, each of which causes reading and conversion of
      one argument for the function <code class="code">f</code> (see <a href="Scanf.html#conversion"><i>Conversion specifications in format strings</i></a>),</li>
<li>scanning indications to specify boundaries of tokens
      (see scanning <a href="Scanf.html#indication"><i>Scanning indications in format strings</i></a>).</li>
</ul>
<br>
<br>
<span id="space"><div class="h7">The space character in format strings</div></span><br>
<br>
As mentioned above, a plain character in the format string is just
    matched with the next character of the input; however, two characters are
    special exceptions to this rule: the space character (<code class="code"><span class="string">' '</span></code> or ASCII code
    32) and the line feed character (<code class="code"><span class="string">'\n'</span></code> or ASCII code 10).
    A space does not match a single space character, but any amount of
    ``whitespace'' in the input. More precisely, a space inside the format
    string matches <em>any number</em> of tab, space, line feed and carriage
    return characters. Similarly, a line feed character in the format string
    matches either a single line feed or a carriage return followed by a line
    feed.
<p>

    Matching <em>any</em> amount of whitespace, a space in the format string
    also matches no amount of whitespace at all; hence, the call <code class="code">bscanf ib
    <span class="string">"Price = %d $"</span> (<span class="keyword">fun</span> p <span class="keywordsign">-&gt;</span> p)</code> succeeds and returns <code class="code">1</code> when reading an
    input with various whitespace in it, such as <code class="code"><span class="constructor">Price</span> = 1 $</code>,
    <code class="code"><span class="constructor">Price</span>  =  1    $</code>, or even <code class="code"><span class="constructor">Price</span>=1$</code>.<br>
<br>
<span id="conversion"></span></p><div class="h7">Conversion specifications in format strings</div><br>
<br>
Conversion specifications consist in the <code class="code">%</code> character, followed by
    an optional flag, an optional field width, and followed by one or
    two conversion characters. The conversion characters and their
    meanings are:
<p>
</p><ul>
<li><code class="code">d</code>: reads an optionally signed decimal integer.</li>
<li><code class="code">i</code>: reads an optionally signed integer
      (usual input conventions for decimal (<code class="code">0-9</code>+), hexadecimal
       (<code class="code">0x[0-9a-f]+</code> and <code class="code">0<span class="constructor">X</span>[0-9<span class="constructor">A</span>-<span class="constructor">F</span>]+</code>), octal (<code class="code">0o[0-7]+</code>), and binary
       (<code class="code">0b[0-1]+</code>) notations are understood).</li>
<li><code class="code">u</code>: reads an unsigned decimal integer.</li>
<li><code class="code">x</code> or <code class="code"><span class="constructor">X</span></code>: reads an unsigned hexadecimal integer (<code class="code">[0-9a-fA-<span class="constructor">F</span>]+</code>).</li>
<li><code class="code">o</code>: reads an unsigned octal integer (<code class="code">[0-7]+</code>).</li>
<li><code class="code">s</code>: reads a string argument that spreads as much as possible, until the
      following bounding condition holds: <ul>
<li>a whitespace has been found (see <a href="Scanf.html#space"><i>The space character in format strings</i></a>),</li>
<li>a scanning indication (see scanning <a href="Scanf.html#indication"><i>Scanning indications in format strings</i></a>) has been
         encountered,</li>
<li>the end-of-input has been reached.</li>
</ul>

      Hence, this conversion always succeeds: it returns an empty
      string if the bounding condition holds when the scan begins.</li>
<li><code class="code"><span class="constructor">S</span></code>: reads a delimited string argument (delimiters and special
      escaped characters follow the lexical conventions of OCaml).</li>
<li><code class="code">c</code>: reads a single character. To test the current input character
      without reading it, specify a null field width, i.e. use
      specification <code class="code">%0c</code>. Raise <code class="code"><span class="constructor">Invalid_argument</span></code>, if the field width
      specification is greater than 1.</li>
<li><code class="code"><span class="constructor">C</span></code>: reads a single delimited character (delimiters and special
      escaped characters follow the lexical conventions of OCaml).</li>
<li><code class="code">f</code>, <code class="code">e</code>, <code class="code"><span class="constructor">E</span></code>, <code class="code">g</code>, <code class="code"><span class="constructor">G</span></code>: reads an optionally signed
      floating-point number in decimal notation, in the style <code class="code">dddd.ddd
      e/<span class="constructor">E</span>+-dd</code>.</li>
<li><code class="code"><span class="constructor">F</span></code>: reads a floating point number according to the lexical
      conventions of OCaml (hence the decimal point is mandatory if the
      exponent part is not mentioned).</li>
<li><code class="code"><span class="constructor">B</span></code>: reads a boolean argument (<code class="code"><span class="keyword">true</span></code> or <code class="code"><span class="keyword">false</span></code>).</li>
<li><code class="code">b</code>: reads a boolean argument (for backward compatibility; do not use
      in new programs).</li>
<li><code class="code">ld</code>, <code class="code">li</code>, <code class="code">lu</code>, <code class="code">lx</code>, <code class="code">lX</code>, <code class="code">lo</code>: reads an <code class="code">int32</code> argument to
      the format specified by the second letter for regular integers.</li>
<li><code class="code">nd</code>, <code class="code">ni</code>, <code class="code">nu</code>, <code class="code">nx</code>, <code class="code">nX</code>, <code class="code">no</code>: reads a <code class="code">nativeint</code> argument to
      the format specified by the second letter for regular integers.</li>
<li><code class="code"><span class="constructor">Ld</span></code>, <code class="code"><span class="constructor">Li</span></code>, <code class="code"><span class="constructor">Lu</span></code>, <code class="code"><span class="constructor">Lx</span></code>, <code class="code"><span class="constructor">LX</span></code>, <code class="code"><span class="constructor">Lo</span></code>: reads an <code class="code">int64</code> argument to
      the format specified by the second letter for regular integers.</li>
<li><code class="code">[ range ]</code>: reads characters that matches one of the characters
      mentioned in the range of characters <code class="code">range</code> (or not mentioned in
      it, if the range starts with <code class="code">^</code>). Reads a <code class="code">string</code> that can be
      empty, if the next input character does not match the range. The set of
      characters from <code class="code">c1</code> to <code class="code">c2</code> (inclusively) is denoted by <code class="code">c1-c2</code>.
      Hence, <code class="code">%[0-9]</code> returns a string representing a decimal number
      or an empty string if no decimal digit is found; similarly,
      <code class="code">%[\\048-\\057\\065-\\070]</code> returns a string of hexadecimal digits.
      If a closing bracket appears in a range, it must occur as the
      first character of the range (or just after the <code class="code">^</code> in case of
      range negation); hence <code class="code">[]]</code> matches a <code class="code">]</code> character and
      <code class="code">[^]]</code> matches any character that is not <code class="code">]</code>.
      Use <code class="code">%%</code> and <code class="code">%@</code> to include a <code class="code">%</code> or a <code class="code">@</code> in a range.</li>
<li><code class="code">r</code>: user-defined reader. Takes the next <code class="code">ri</code> formatted input
      function and applies it to the scanning buffer <code class="code">ib</code> to read the
      next argument. The input function <code class="code">ri</code> must therefore have type
      <code class="code"><span class="constructor">Scanning</span>.in_channel <span class="keywordsign">-&gt;</span> <span class="keywordsign">'</span>a</code> and the argument read has type <code class="code"><span class="keywordsign">'</span>a</code>.</li>
<li><code class="code">{ fmt %}</code>: reads a format string argument.  The format string
      read must have the same type as the format string specification
      <code class="code">fmt</code>.  For instance, <code class="code"><span class="string">"%{ %i %}"</span></code> reads any format string that
      can read a value of type <code class="code">int</code>; hence, if <code class="code">s</code> is the string
      <code class="code"><span class="string">"fmt:\"number is %u\""</span></code>, then <code class="code"><span class="constructor">Scanf</span>.sscanf s <span class="string">"fmt: %{%i%}"</span></code>
      succeeds and returns the format string <code class="code"><span class="string">"number is %u"</span></code>.</li>
<li><code class="code">\( fmt %\)</code>: scanning format substitution.
      Reads a format string and then goes on scanning with the format string
      read, instead of using <code class="code">fmt</code>.
      The format string read must have the same type as the format string
      specification <code class="code">fmt</code> that it replaces.
      For instance, <code class="code"><span class="string">"%( %i %)"</span></code> reads any format string that can read a value
      of type <code class="code">int</code>.
      Returns the format string read, and the value read using the format
      string read.
      Hence, if <code class="code">s</code> is the string <code class="code"><span class="string">"\"%4d\"1234.00"</span></code>, then
      <code class="code"><span class="constructor">Scanf</span>.sscanf s <span class="string">"%(%i%)"</span> (<span class="keyword">fun</span> fmt i <span class="keywordsign">-&gt;</span> fmt, i)</code> evaluates to
      <code class="code">(<span class="string">"%4d"</span>, 1234)</code>.
      If the special flag <code class="code">_</code> is used, the conversion discards the
      format string read and only returns the value read with the format
      string read.
      Hence, if <code class="code">s</code> is the string <code class="code"><span class="string">"\"%4d\"1234.00"</span></code>, then
      <code class="code"><span class="constructor">Scanf</span>.sscanf s <span class="string">"%_(%i%)"</span></code> is simply equivalent to
      <code class="code"><span class="constructor">Scanf</span>.sscanf <span class="string">"1234.00"</span> <span class="string">"%4d"</span></code>.</li>
<li><code class="code">l</code>: returns the number of lines read so far.</li>
<li><code class="code">n</code>: returns the number of characters read so far.</li>
<li><code class="code"><span class="constructor">N</span></code> or <code class="code"><span class="constructor">L</span></code>: returns the number of tokens read so far.</li>
<li><code class="code">!</code>: matches the end of input condition.</li>
<li><code class="code">%</code>: matches one <code class="code">%</code> character in the input.</li>
<li><code class="code">@</code>: matches one <code class="code">@</code> character in the input.</li>
<li><code class="code">,</code>: does nothing.</li>
</ul>

    Following the <code class="code">%</code> character that introduces a conversion, there may be
    the special flag <code class="code">_</code>: the conversion that follows occurs as usual,
    but the resulting value is discarded.
    For instance, if <code class="code">f</code> is the function <code class="code"><span class="keyword">fun</span> i <span class="keywordsign">-&gt;</span> i + 1</code>, and <code class="code">s</code> is the
    string <code class="code"><span class="string">"x = 1"</span></code>, then <code class="code"><span class="constructor">Scanf</span>.sscanf s <span class="string">"%_s = %i"</span> f</code> returns <code class="code">2</code>.
<p>

    The field width is composed of an optional integer literal
    indicating the maximal width of the token to read.
    For instance, <code class="code">%6d</code> reads an integer, having at most 6 decimal digits;
    <code class="code">%4f</code> reads a float with at most 4 characters; and <code class="code">%8[\\000-\\255]</code>
    returns the next 8 characters (or all the characters still available,
    if fewer than 8 characters are available in the input).
</p><p>

    Notes:
</p><p>
</p><ul>
<li>as mentioned above, a <code class="code">%s</code> conversion always succeeds, even if there is
      nothing to read in the input: in this case, it simply returns <code class="code"><span class="string">""</span></code>.</li>
</ul>
<ul>
<li>in addition to the relevant digits, <code class="code"><span class="string">'_'</span></code> characters may appear
    inside numbers (this is reminiscent to the usual OCaml lexical
    conventions). If stricter scanning is desired, use the range
    conversion facility instead of the number conversions.</li>
</ul>
<ul>
<li>the <code class="code">scanf</code> facility is not intended for heavy duty lexical
    analysis and parsing. If it appears not expressive enough for your
    needs, several alternative exists: regular expressions (module
    <code class="code"><span class="constructor">Str</span></code>), stream parsers, <code class="code">ocamllex</code>-generated lexers,
    <code class="code">ocamlyacc</code>-generated parsers.</li>
</ul>
<br>
<br>
<span id="indication"><div class="h7">Scanning indications in format strings</div></span><br>
<br>
Scanning indications appear just after the string conversions <code class="code">%s</code>
    and <code class="code">%[ range ]</code> to delimit the end of the token. A scanning
    indication is introduced by a <code class="code">@</code> character, followed by some
    plain character <code class="code">c</code>. It means that the string token should end
    just before the next matching <code class="code">c</code> (which is skipped). If no <code class="code">c</code>
    character is encountered, the string token spreads as much as
    possible. For instance, <code class="code"><span class="string">"%s@\t"</span></code> reads a string up to the next
    tab character or to the end of input. If a <code class="code">@</code> character appears
    anywhere else in the format string, it is treated as a plain character.
<p>

    Note:
</p><p>
</p><ul>
<li>As usual in format strings, <code class="code">%</code> characters must be escaped using <code class="code">%%</code>
      and <code class="code">%@</code> is equivalent to <code class="code">@</code>; this rule still holds within range
      specifications and scanning indications.
      For instance, <code class="code"><span class="string">"%s@%%"</span></code> reads a string up to the next <code class="code">%</code> character.</li>
<li>The scanning indications introduce slight differences in the syntax of
    <code class="code"><span class="constructor">Scanf</span></code> format strings, compared to those used for the <code class="code"><span class="constructor">Printf</span></code>
    module. However, the scanning indications are similar to those used in
    the <code class="code"><span class="constructor">Format</span></code> module; hence, when producing formatted text to be scanned
    by <code class="code">!<span class="constructor">Scanf</span>.bscanf</code>, it is wise to use printing functions from the
    <code class="code"><span class="constructor">Format</span></code> module (or, if you need to use functions from <code class="code"><span class="constructor">Printf</span></code>, banish
    or carefully double check the format strings that contain <code class="code"><span class="string">'@'</span></code>
    characters).</li>
</ul>
<br>
<br>
<span id="7_Exceptionsduringscanning"><div class="h7">Exceptions during scanning</div></span><br>
<br>
Scanners may raise the following exceptions when the input cannot be read
    according to the format string:
<p>
</p><ul>
<li>Raise <code class="code"><span class="constructor">Scanf</span>.<span class="constructor">Scan_failure</span></code> if the input does not match the format.</li>
</ul>
<ul>
<li>Raise <code class="code"><span class="constructor">Failure</span></code> if a conversion to a number is not possible.</li>
</ul>
<ul>
<li>Raise <code class="code"><span class="constructor">End_of_file</span></code> if the end of input is encountered while some more
      characters are needed to read the current conversion specification.</li>
</ul>
<ul>
<li>Raise <code class="code"><span class="constructor">Invalid_argument</span></code> if the format string is invalid.</li>
</ul>

    Note:
<p>
</p><ul>
<li>as a consequence, scanning a <code class="code">%s</code> conversion never raises exception
    <code class="code"><span class="constructor">End_of_file</span></code>: if the end of input is reached the conversion succeeds and
    simply returns the characters read so far, or <code class="code"><span class="string">""</span></code> if none were ever read.</li>
</ul>
<br>
<br>
<span id="6_Specialisedformattedinputfunctions"><h6>Specialised formatted input functions</h6></span><br>
<pre><span id="VALfscanf"><span class="keyword">val</span> fscanf</span> : <code class="type"><a href="Pervasives.html#TYPEin_channel">in_channel</a> -&gt; ('a, 'b, 'c, 'd) <a href="Scanf.html#TYPEscanner">scanner</a></code></pre><div class="info">
Same as <a href="Scanf.html#VALbscanf"><code class="code"><span class="constructor">Scanf</span>.bscanf</code></a>, but reads from the given regular input channel.
<p>

    Warning: since all formatted input functions operate from a <em>formatted
    input channel</em>, be aware that each <code class="code">fscanf</code> invocation will operate with a
    formatted input channel reading from the given channel. This extra level
    of bufferization can lead to a strange scanning behaviour if you use low
    level primitives on the channel (reading characters, seeking the reading
    position, and so on).
</p><p>

    As a consequence, never mix direct low level reading and high level
    scanning from the same regular input channel.<br>
</p></div>
<pre><span id="VALsscanf"><span class="keyword">val</span> sscanf</span> : <code class="type">string -&gt; ('a, 'b, 'c, 'd) <a href="Scanf.html#TYPEscanner">scanner</a></code></pre><div class="info">
Same as <a href="Scanf.html#VALbscanf"><code class="code"><span class="constructor">Scanf</span>.bscanf</code></a>, but reads from the given string.<br>
</div>
<pre><span id="VALscanf"><span class="keyword">val</span> scanf</span> : <code class="type">('a, 'b, 'c, 'd) <a href="Scanf.html#TYPEscanner">scanner</a></code></pre><div class="info">
Same as <a href="Scanf.html#VALbscanf"><code class="code"><span class="constructor">Scanf</span>.bscanf</code></a>, but reads from the predefined formatted input
    channel <a href="Scanf.Scanning.html#VALstdin"><code class="code"><span class="constructor">Scanf</span>.<span class="constructor">Scanning</span>.stdin</code></a> that is connected to <code class="code"><span class="constructor">Pervasives</span>.stdin</code>.<br>
</div>
<pre><span id="VALkscanf"><span class="keyword">val</span> kscanf</span> : <code class="type"><a href="Scanf.Scanning.html#TYPEin_channel">Scanning.in_channel</a> -&gt;<br>       (<a href="Scanf.Scanning.html#TYPEin_channel">Scanning.in_channel</a> -&gt; exn -&gt; 'd) -&gt; ('a, 'b, 'c, 'd) <a href="Scanf.html#TYPEscanner">scanner</a></code></pre><div class="info">
Same as <a href="Scanf.html#VALbscanf"><code class="code"><span class="constructor">Scanf</span>.bscanf</code></a>, but takes an additional function argument
    <code class="code">ef</code> that is called in case of error: if the scanning process or
    some conversion fails, the scanning function aborts and calls the
    error handling function <code class="code">ef</code> with the formatted input channel and the
    exception that aborted the scanning process as arguments.<br>
</div>
<br>
<span id="6_Readingformatstringsfrominput"><h6>Reading format strings from input</h6></span><br>
<pre><span id="VALbscanf_format"><span class="keyword">val</span> bscanf_format</span> : <code class="type"><a href="Scanf.Scanning.html#TYPEin_channel">Scanning.in_channel</a> -&gt;<br>       ('a, 'b, 'c, 'd, 'e, 'f) format6 -&gt;<br>       (('a, 'b, 'c, 'd, 'e, 'f) format6 -&gt; 'g) -&gt; 'g</code></pre><div class="info">
<code class="code">bscanf_format ic fmt f</code> reads a format string token from the formatted
    input channel <code class="code">ic</code>, according to the given format string <code class="code">fmt</code>, and
    applies <code class="code">f</code> to the resulting format string value.
    Raise <code class="code"><span class="constructor">Scan_failure</span></code> if the format string value read does not have the
    same type as <code class="code">fmt</code>.<br>
<b>Since</b> 3.09.0<br>
</div>
<pre><span id="VALsscanf_format"><span class="keyword">val</span> sscanf_format</span> : <code class="type">string -&gt;<br>       ('a, 'b, 'c, 'd, 'e, 'f) format6 -&gt;<br>       (('a, 'b, 'c, 'd, 'e, 'f) format6 -&gt; 'g) -&gt; 'g</code></pre><div class="info">
Same as <a href="Scanf.html#VALbscanf_format"><code class="code"><span class="constructor">Scanf</span>.bscanf_format</code></a>, but reads from the given string.<br>
<b>Since</b> 3.09.0<br>
</div>
<pre><span id="VALformat_from_string"><span class="keyword">val</span> format_from_string</span> : <code class="type">string -&gt;<br>       ('a, 'b, 'c, 'd, 'e, 'f) format6 -&gt; ('a, 'b, 'c, 'd, 'e, 'f) format6</code></pre><div class="info">
<code class="code">format_from_string s fmt</code> converts a string argument to a format string,
    according to the given format string <code class="code">fmt</code>.
    Raise <code class="code"><span class="constructor">Scan_failure</span></code> if <code class="code">s</code>, considered as a format string, does not
    have the same type as <code class="code">fmt</code>.<br>
<b>Since</b> 3.10.0<br>
</div>
<pre><span id="VALunescaped"><span class="keyword">val</span> unescaped</span> : <code class="type">string -&gt; string</code></pre><div class="info">
Return a copy of the argument with escape sequences, following the
    lexical conventions of OCaml, replaced by their corresponding
    special characters.  If there is no escape sequence in the
    argument, still return a copy, contrary to String.escaped.<br>
<b>Since</b> 4.00.0<br>
</div>
<div class="copyright">The present documentation is copyright Institut National de Recherche en Informatique et en Automatique (INRIA). A complete version can be obtained from <a href="http://caml.inria.fr/pub/docs/manual-ocaml/">this page</a>.</div></div>